[project]
name = "herecrm-gpt"
version = "0.1.0"
description = "123"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-cookie3>=0.20.1",
    "fastapi>=0.115.11",
    "g4f[openai]==0.4.7.7",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "uvicorn[standart]>=0.34.0",
]

